kubernetes/banklab/docs-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banklab-docs
  labels:
    app.kubernetes.io/part-of: kong-bank-lab
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: operator-documentation
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
